--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Curso 'Cypress Simulator' da Escola Talking About Testing.",
   "main": "src/index.html",
   "scripts": {
+    "start": "http-server ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,5 +17,9 @@
   ],
   "author": "Walmyr <wlsf82@gmail.com> (https://walmyr.dev/)",
   "license": "MIT",
-  "type": "commonjs"
+  "type": "commonjs",
+  "devDependencies": {
+    "cypress": "^13.17.0",
+    "http-server": "^14.1.1"
+  }
 }
