--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "license": "MIT",
   "type": "commonjs",
   "devDependencies": {
+    "axe-core": "^4.10.2",
     "cypress": "^13.17.0",
+    "cypress-axe": "^1.5.0",
     "http-server": "^14.1.1"
   }
 }
