--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axe-core": "^4.10.2",
     "cypress": "^13.17.0",
     "cypress-axe": "^1.5.0",
+    "cypress-split": "^1.24.23",
     "http-server": "^14.1.1"
   }
 }
