--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: End-to-end tests
 on: push
 jobs:
-  cypress-run:
+  tests:
     runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Run Cypress tests in parallel
+      - name: Run Cypress tests in parallel 🧪
         uses: cypress-io/github-action@v6
         env:
           SPLIT: ${{ strategy.job-total }}
